codex-rs/tui/src/snapshots/codex_tui__app__tests__clear_ui_after_long_transcript_fresh_header_only.snap
---
source: tui/src/app/tests.rs
assertion_line: 5874
expression: rendered
---

  >_ Elpis (v<VERSION>)
     /tmp/project
