codex-rs/tui/src/snapshots/codex_tui__app__tests__path_backed_agent_picker.snap
---
source: tui/src/app/tests.rs
assertion_line: 2318
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
 Elpis · model gpt-5.6-sol · location /tmp/project

  Subagents
  Select an agent to watch. ⌥← previous, ⌥→ next.


› 1. • /root/worker  00000000-0000-0000-0000-000000000123

  enter select · esc back
