codex-rs/tui/src/snapshots/codex_tui__app__tests__replayed_file_change_approval.snap
---
source: tui/src/app/tests.rs
expression: rendered
---
  Would you like to make the following edits?

  Description: Apply proposed file edits
  Destination: /tmp/project/visible-target.md


› 1. Yes, proceed (y)
  2. Yes, and don't ask again for these files (a)
  3. No, and tell Elpis what to do differently (esc)

  Press enter to confirm or esc to cancel
