codex-rs/tui/src/snapshots/codex_tui__app__tests__untracked_thread_notifications_agent_picker.snap
---
source: tui/src/app/tests.rs
assertion_line: 2095
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
 Elpis · model gpt-test default · location /tmp/project

  Subagents
  Select an agent to watch. ⌥← previous, ⌥→ next.


› 1. • Main [default] (current)  00000000-0000-0000-0000-000000000123

  enter select · esc back
